--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,71 @@
     transform: rotate(360deg);
   }
 }
+
+
+.left-bottom-element {
+  bottom: 5%;
+  left: 5%;
+}
+
+.fixed-button {
+  position: absolute;
+  z-index: 30;
+  width: 7.142rem;
+  height: 7.142rem;
+  padding: 0;
+  font-size: 2rem;
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 50%;
+  outline: none !important;
+}
+
+.icon-button {
+	cursor: pointer;
+	display: inline-block;
+	border: 0;
+	background: white;
+	color: #666666;
+	text-decoration: underline;
+	vertical-align: middle;
+	outline: 0;
+}
+
+.icon-button .fa {
+	font-size: 1.25rem;
+	opacity: 0.4;
+	-webkit-transition: opacity .2s;
+	-moz-transition: opacity .2s;
+	transition: opacity .2s;
+}
+
+.icon-button .fa:hover {
+	opacity: 1;
+}
+
+.icon-button-no-left-padding {
+	padding-left: 0;
+}
+
+.center-bottom-element {
+  bottom: 5%;
+  right: 5%;
+}
+
+.image-canvas {
+  position: fixed;
+  background-color: #000000;
+}
+
+.ticket-photo-preview-image-canvas-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vh;
+  height: 100vh;
+  background-color: #000000;
+}
+
+.hidden {
+	display: none;
+}
