--- a/src/components/TicketPhotoPreview/TicketPhotoPreview.css
+++ b/src/components/TicketPhotoPreview/TicketPhotoPreview.css
@@ -3,6 +3,9 @@
 	top: 0;
 	left: 0;
 	width: 100vh;
+	width: 100%;
+	display: flex;
+	justify-content: center;
 	height: 100vh;
 	background-color: #000000;
 }
